--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,13 +6,11 @@
   </div>
 
   <div class="tabla">
-    <p-table [value]="mediciones">
+    <p-table [value]="mediciones" [paginator]="true" [rows]="10">
       <ng-template pTemplate="header">
         <tr>
-          <th>Id de la Medicion</th>
-          <th>id del Sensor</th>
-          <th>Ubicacion Sensor</th>
-          <th>Fecha de la Medicion</th>
+          <th *ngFor="let col of columnas">
+            {{col.header}}</th>
         </tr>
       </ng-template>
       <ng-template pTemplate="body" let-medicion>
